# nexagen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: architecture.md  usage.md
nexagen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nexagen/analysis/: brand_score.py  collision_detection.py  phonetic_analysis.py  uniqueness_score.py
nexagen/checks/: docker_check.py  github_check.py  npm_check.py  platform_dispatcher.py  pypi_check.py
nexagen/cli/: app.py  commands.py  help.py  menu.py
nexagen/config/: constants.py  settings.py
nexagen/datasets/: ai_terms.txt  brand_blacklist.txt  business_terms.txt  common_words.txt  prefixes.txt  suffixes.txt  synonyms.txt  tech_terms.txt  tlds.txt
nexagen/domains/: domain_checker.py  domain_generator.py  domain_ranker.py  tld_strategy.py
nexagen/engine/: generator.py  keyword_engine.py  mutation_engine.py  name_generator.py  pattern_engine.py  synonym_engine.py
nexagen/export/: csv_export.py  json_export.py  markdown_export.py  report_builder.py
nexagen/ui/: animations.py  banner.py  progress.py  tables.py  theme.py
nexagen/utils/: dataset_loader.py  helpers.py  levenshtein.py  text_utils.py  validators.py
tests/: test_domains.py  test_generation.py  test_scoring.py
utils/: logger.py
