# ─────────────────────────────────────────────────────────────────────────────
#  NEXAGEN — Platform Naming Intelligence Engine
#  CEX-Nexagen · Developed by CyberEmpireX
#  Part of the CyberEmpireX (CEX) Ecosystem
# ─────────────────────────────────────────────────────────────────────────────

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


# ── Project Metadata ──────────────────────────────────────────────────────────

[project]
name        = "nexagen"
version     = "1.0.0"
description = "NEXAGEN — Platform Naming Intelligence Engine by CEX-Nexagen"
readme      = "README.md"
license     = { file = "LICENSE" }

authors = [
]

maintainers = [
]

keywords = [
    "brand-name-generator",
    "startup-naming",
    "platform-naming",
    "domain-suggestions",
    "cli-tool",
    "branding-intelligence",
    "naming-engine",
    "developer-tools",
    "cyberempirex",
    "cex"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

requires-python = ">=3.9"

dependencies = [
    "rich>=13.0",
    "typer>=0.9",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
]


# ── Optional Dependencies ─────────────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]


# ── Entry Points ──────────────────────────────────────────────────────────────

[project.scripts]
nexagen = "nexagen.cli.app:main"


# ── Project URLs ──────────────────────────────────────────────────────────────

[project.urls]
Homepage      = "https://github.com/cyberempirex/nexagen"
Repository    = "https://github.com/cyberempirex/nexagen"
Documentation = "https://github.com/cyberempirex/nexagen/blob/main/docs/usage.md"
"Bug Tracker" = "https://github.com/cyberempirex/nexagen/issues"


# ── Package Discovery ─────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["nexagen*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
nexagen = [
    "datasets/*.txt",
    "config/*.toml",
    "config/*.cfg",
]


# ── Black (code formatter) ────────────────────────────────────────────────────

[tool.black]
line-length    = 88
target-version = ["py39", "py310", "py311", "py312"]
include        = '\.pyi?$'


# ── Ruff (linter) ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]


# ── Mypy (type checker) ───────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.9"
strict                 = false
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true


# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"


# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source   = ["nexagen"]
omit     = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 60
