# ─────────────────────────────────────────────────────────────────────────────
#  NEXAGEN — Platform Naming Intelligence Engine
#  CEX-Nexagen · Developed by CyberEmpireX
#  setup.cfg — packaging configuration and tool options
# ─────────────────────────────────────────────────────────────────────────────

[metadata]
name                          = nexagen
version                       = 1.0.0
description                   = NEXAGEN — Platform Naming Intelligence Engine by CEX-Nexagen
long_description              = file: README.md
long_description_content_type = text/markdown
license                       = MIT
license_files                 = LICENSE
author                        = CEX-Nexagen
url                           = https://github.com/cyberempirex/nexagen
project_urls                  =
    Homepage      = https://github.com/cyberempirex/nexagen
    Repository    = https://github.com/cyberempirex/nexagen
    Documentation = https://github.com/cyberempirex/nexagen/blob/main/docs/usage.md
    Bug Tracker   = https://github.com/cyberempirex/nexagen/issues
keywords                      =
    brand-name-generator
    startup-naming
    platform-naming
    domain-suggestions
    cli-tool
    branding-intelligence
    naming-engine
    developer-tools
    cyberempirex
    cex
classifiers                   =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
    Topic :: Terminals


# ── Package Options ───────────────────────────────────────────────────────────

[options]
packages              = find:
include_package_data  = True
python_requires       = >=3.9
zip_safe              = False

install_requires =
    rich>=13.0
    typer>=0.9
    httpx>=0.27
    rapidfuzz>=3.0


# ── Package Discovery ─────────────────────────────────────────────────────────

[options.packages.find]
where   = .
include = nexagen*
exclude =
    tests*
    docs*
    scripts*


# ── Package Data (ships datasets with the installed package) ──────────────────

[options.package_data]
nexagen =
    datasets/*.txt
    config/*.toml
    config/*.cfg


# ── CLI Entry Point ───────────────────────────────────────────────────────────

[options.entry_points]
console_scripts =
    nexagen = nexagen.cli.app:main


# ── Optional / Dev Dependencies ───────────────────────────────────────────────

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-asyncio>=0.21
    black>=23.0
    ruff>=0.1
    mypy>=1.0


# ── Flake8 (lint) ─────────────────────────────────────────────────────────────

[flake8]
max-line-length = 88
extend-ignore   = E203, E501, W503
exclude         =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info


# ── isort (import sorting) ────────────────────────────────────────────────────

[isort]
profile                 = black
line_length             = 88
known_first_party       = nexagen
known_third_party       = rich, typer, httpx, rapidfuzz
multi_line_output       = 3
include_trailing_comma  = True
force_grid_wrap         = 0
use_parentheses         = True


# ── Mypy ─────────────────────────────────────────────────────────────────────

[mypy]
python_version         = 3.9
warn_return_any        = True
warn_unused_configs    = True
ignore_missing_imports = True


# ── Pytest ────────────────────────────────────────────────────────────────────

[tool:pytest]
testpaths        = tests
python_files     = test_*.py
python_classes   = Test*
python_functions = test_*
addopts          = -v --tb=short
